# ssq

./: .gitignore  CMakeLists.txt  README.md  cliff.toml  pixi.toml  pyproject.toml
.github/workflows/: ci.yml  pypi.yml  release.yml
include/ssq/: fftw_wrapper.hpp  fsst.hpp  stft.hpp  wsst.hpp
python/: bindings.cpp
recipe/: recipe.yaml
scripts/: compare_with_matlab.py  compare_wsst_with_matlab.py  generate_fsst_reference.m  generate_wsst_reference.m
src/: cwt.cpp  fftw_wrapper.cpp  fsst.cpp  stft.cpp  wavelet.cpp  windows.cpp  wsst.cpp
test/: test_fsst.cpp  test_stft.cpp  test_windows.cpp  test_wsst.cpp
